@@ -489,7 +489,13 @@ static void g_print_ast_array_size( g_state_t const *g, c_ast_t const *ast ) {
   assert( ast->kind == K_ARRAY );
 
   FPUTS( graph_token_c( "[" ), g->gout );
-  fputs_sp( c_tid_name_c( ast->as.array.stids ), g->gout );
+
+  bool space = false;
+  if ( ast->as.array.stids != TS_NONE ) {
+    fputs( c_tid_name_c( ast->as.array.stids ), g->gout );
+    space = true;
+  }
+
   switch ( ast->as.array.size ) {
     case C_ARRAY_SIZE_NONE:
       break;
@@ -497,8 +503,11 @@ static void g_print_ast_array_size( g_state_t const *g, c_ast_t const *ast ) {
       FPUTC( '*', g->gout );
       break;
     default:
+      if ( space )
+        FPUTC( ' ', g->gout );
       FPRINTF( g->gout, PRId_C_ARRAY_SIZE_T, ast->as.array.size );
   } // switch
+
   FPUTS( graph_token_c( "]" ), g->gout );
 }
 
