@@ -1,0 +1,4 @@
+EXPECTED_EXIT=0
+cdecl <<END
+declare f as function (x as array const of int) returning void
+END
