@@ -16,6 +16,9 @@ with their complete changes, see the AUTHORS file.
 Explicit user-defined conversion operators are now correctly allowed in C++11
 and later.
 
+** Fixed `const` array
+Array parameters no longer have a space wrongly emitted after `const`.
+
 
 * Changes in Cdecl 12.0
 
